# md2pdf

./: .gitignore  GEMINI.md  README.md  SKILL.md  gemini-extension.json  pyproject.toml
.claude/skills/md-to-pdf/: SKILL.md
.gemini/commands/: md-to-pdf.toml
agents/: openai.yaml
commands/: md-to-pdf.toml
md2pdf/: __init__.py  __main__.py  core.py
references/: install.md
scripts/: bootstrap.py  md2pdf.py
tests/: test_core.py
tests/fixtures/: sample.md
